src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <label>Application Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Expression of Interest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Project</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Window_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Window Template</label>
        <referenceTo>Application_Window_Template__c</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_Form_External_Status__c</fullName>
        <formula>IF(
   OR(
      TEXT(Development_Form_Status__c) = &quot;Under Review&quot;, 
      TEXT(Development_Form_Status__c) = &quot;Ready for Approval&quot;
   ), &quot;Submitted&quot;, TEXT(Development_Form_Status__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dev Form External Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Form_Status__c</fullName>
        <label>Dev Form Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under review (In progress)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EOI_External_Status__c</fullName>
        <formula>IF(
   OR(
      TEXT(Status__c) = &quot;Under Review&quot;, 
      TEXT(Status__c) = &quot;Ready for Approval&quot;
   ), &quot;Submitted&quot;, TEXT(Status__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EOI External Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Answered_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Answered Question</label>
        <referenceTo>Application_Question__c</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>EOI Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under review (In progress)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <formula>Application_Window_Template__r.Application_Window__r.Theme__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theme</label>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Window_Template__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Applications_Assigned_to_me</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reviewer__c</field>
            <operation>contains</operation>
            <value>Nithya</value>
        </filters>
        <label>Applications - Assigned to me</label>
    </listViews>
    <listViews>
        <fullName>Submitted</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Submitted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Submitted</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Apply_for_Closed_Application</fullName>
        <active>true</active>
        <description>Prevents applications from being submitted against a theme that is not Live</description>
        <errorConditionFormula>AND(
NOT(Application_Window_Template__r.Application_Window__r.Is_Live__c),
NOT(ISPICKVAL(Status__c , &quot;Draft&quot;))
)</errorConditionFormula>
        <errorMessage>The Theme you are applying for is not currently accepting applications</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Status_Closed_App</fullName>
        <active>true</active>
        <description>Once I made an application successful or not successful, I shouldn&apos;t be able to change that status back</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(PRIORVALUE(Status__c), &quot;Successful&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Unsuccessful&quot;)
),
ISCHANGED(Status__c)
)</errorConditionFormula>
        <errorMessage>You cannot change the status of an application when it has been designated as &quot;Successful&quot; or &quot;Unsuccessful&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Submitted_Application</fullName>
        <active>false</active>
        <description>An applicant cannot edit an application which has been submitted</description>
        <errorConditionFormula>AND(
Is_Submitted__c = TRUE,
$User.ProfileId = &quot;00e25000000MAf9&quot;
)</errorConditionFormula>
        <errorMessage>You cannot edit a submitted application</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SIB_Std_User_Cant_Edit_Submitted_App</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Is_Submitted__c = TRUE, 
$User.ProfileId = &quot;00e25000000MAdI&quot;, 
NOT(ISCHANGED(Status__c)), 
NOT(ISCHANGED(Reviewer__c )))</errorConditionFormula>
        <errorMessage>You cannot edit a submitted application</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Set_Appl_to_Successful_Unsuccessful</fullName>
        <active>true</active>
        <errorConditionFormula>$User.ProfileId = &quot;00e25000000MAdI&quot; &amp;&amp;
(ISPICKVAL( Status__c , &quot;Successful&quot;)  || 
ISPICKVAL( Status__c , &quot;Unsuccessful&quot;))</errorConditionFormula>
        <errorMessage>Only Admin Users can set an Application to Successful or Unsuccessful</errorMessage>
    </validationRules>
</CustomObject>